@startuml
hide methods
skinparam classAttributeIconSize 0

' docs/terms.md に定義された語彙のみを使用すること

class "語彙データ" {
  dictionaries: DictionaryName -> Dictionary
}

class DictionaryName {
  value: string
}

class Entry {
  term: string
  meanings: string[]
  examples?: string[]
}

class Dictionary {
  name: string
  language: Language
  entries: Entry[]
}

class Language {
  source: string
  target: string
}
class "例文"

"語彙データ" "1" o-- "*" DictionaryName
"語彙データ" "1" o-- "*" Dictionary
Dictionary "1" o-- "1" Language
Dictionary "1" o-- "*" Entry
DictionaryName ..> Dictionary : key
Entry "0" -- "*" "例文"

note right of Entry
  一意性: (dictionaryName, term)
end note

note bottom of "例文"
  AIによって作成される例文
end note

@enduml
